# syslog-ng-mef

./: Makefile  Makefile.am  Makefile.in  afinet.c  afinet.h  afmef-dest.c  afmef-dest.h  afmef-grammar.c  afmef-grammar.h  afmef-grammar.y  afmef-grammar.ym  afmef-parser.c  afmef-parser.h  afmef-plugin.c  afmef.c  afmef.h  logproto-mef-client.c  logproto-mef-client.h
